force-app/main/default/objects/Dismantler_member_info__c/Dismantler_member_info__c.object-meta.xml
<CustomObject>
    <description>登録解体業者と会員情報を関連付けるテーブル</description>
    <label>登録解体業者 会員情報</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>