force-app/main/default/objects/Dismantler_member_info__c/fields/dismantler__c.field-meta.xml
<CustomField>
    <fullName>dismantler__c</fullName>
    <label>登録解体業者</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>登録解体業者 会員情報</relationshipLabel>
    <relationshipName>DismantlerMemberInfoRelation</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>