force-app/main/default/objects/Dismantler_member_info__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>会員情報</label>
    <referenceTo>Dismantler__c</referenceTo>
    <relationshipLabel>登録解体業者 会員情報</relationshipLabel>
    <relationshipName>DismantlerMemberInfoRelation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>